--- a/index.html
+++ b/index.html
@@ -29,13 +29,23 @@
     <article class="intro__article">
       <img src="./first_photo_japan.png" alt="Japan mountains" class="intro__image">
       <div class="intro__content">
-        <span class="intro__image-caption">Illustration</span>
-        <h1 class="intro__title">Japan House opens in mountainside to foster peak creativity.</h1>
-        <p class="intro__subtitle">Enim omittam qui id, ex quo atqui dictas complectitur. Nec ad timeam
+        <span class="image-caption">Illustration</span>
+        <h1 class="section-title">Japan House opens in mountainside to foster peak creativity.</h1>
+        <p class="section-subtitle">Enim omittam qui id, ex quo atqui dictas complectitur. Nec ad timeam
           accusata, hinc justo falli id eum, ferri novum molestie eos cu.</p>
-        <span class="intro__author">By Reta Torphy</span>
+        <span class="author-name">By Reta Torphy</span>
       </div>
     </article>
+  </section>
+
+  <section class="article-grid">
+    <div class="article-grid__items">
+      <article class="article-grid__item">
+        <span class="image-caption">Photography</span>
+        <h2 class="section-title section-title_article-grid_theme">Helmut Lang celebrates taxi drivers worldwide in latest campaign</h2>
+        <span class="author-name">By Alessandra Ortiz</span>
+      </article>
+    </div>
   </section>
 </body>
 
