index.html edited

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Noiceland</title>
   <link rel="stylesheet" href="https://use.typekit.net/urv0tcb.css">
-  <link rel="stylesheet" href="./font.css">
-  <link rel="stylesheet" href="./index.css">
+  <link rel="stylesheet" href="./vendor/fonts/fonts.css">
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
 
 <body class="page">
   <header class="header">
     <div class="header__container">
-      <img class="header__logo" src="./logo.png" alt="page logo">
+      <img class="header__logo" src="./images/logo.png" alt="page logo">
       <nav>
         <ul class="header__menu-items">
           <li><a class="header__menu-item" href="#" target="_blank">Home</a></li>
@@ -27,7 +27,7 @@
 
   <section class="intro">
     <article class="intro__article">
-      <img src="./first_photo_japan.png" alt="Japan mountains" class="intro__image">
+      <img src="./images/first_photo_japan.png" alt="Japan mountains" class="intro__image">
       <div class="intro__content">
         <span class="image-caption">Illustration</span>
         <h1 class="section-title">Japan House opens in mountainside to foster peak creativity.</h1>
@@ -39,13 +39,62 @@
   </section>
 
   <section class="article-grid">
-    <div class="article-grid__items">
-      <article class="article-grid__item">
-        <span class="image-caption">Photography</span>
-        <h2 class="section-title section-title_article-grid_theme">Helmut Lang celebrates taxi drivers worldwide in latest campaign</h2>
-        <span class="author-name">By Alessandra Ortiz</span>
-      </article>
-    </div>
+    <ul class="article-grid__items">
+      <li>
+        <article class="article-grid__item">
+          <img class="image image_theme_article-grid" src="./images/grid1.png" alt="">
+          <span class="image-caption">Photography</span>
+          <h2 class="section-title section-title_theme_article-grid">Helmut Lang celebrates taxi drivers worldwide in
+            latest campaign</h2>
+          <span class="author-name">By Alessandra Ortiz</span>
+        </article>
+      </li>
+      <li>
+        <article class="article-grid__item">
+          <img class="image image_theme_article-grid" src="./images/grid2.png" alt="">
+          <span class="image-caption">Photography</span>
+          <h2 class="section-title section-title_theme_article-grid">Bowlcut launch a new summer collection that pays
+            homage to “UK legends”</h2>
+          <span class="author-name">By Rosanna Ondricka</span>
+        </article>
+      </li>
+      <li>
+        <article class="article-grid__item">
+          <img class="image image_theme_article-grid" src="./images/grid3.png" alt="">
+          <span class="image-caption">Photography</span>
+          <h2 class="section-title section-title_theme_article-grid">Thousands of previously unseen photographs by Andy
+            Warhol will be made public this Autumn</h2>
+          <span class="author-name">By Annie Lueilwitz</span>
+        </article>
+      </li>
+      <li>
+        <article class="article-grid__item">
+          <img class="image image_theme_article-grid" src="./images/grid4.png" alt="">
+          <span class="image-caption">Interactive Design</span>
+          <h2 class="section-title section-title_theme_article-grid">London-based Yinka Ilori’s storytelling furniture
+          </h2>
+          <span class="author-name">By Annie Lueilwitz</span>
+        </article>
+      </li>
+      <li>
+        <article class="article-grid__item">
+          <img class="image image_theme_article-grid" src="./images/grid5.png" alt="">
+          <span class="image-caption">Interactive Design</span>
+          <h2 class="section-title section-title_theme_article-grid">Anonymous Israeli art collective Broken Fingaz
+            direct music video for U2 and Beck</h2>
+          <span class="author-name">By Simeon Brekke</span>
+        </article>
+      </li>
+      <li>
+        <article class="article-grid__item">
+          <img class="image image_theme_article-grid" src="./images/grid6.png" alt="">
+          <span class="image-caption">Architecture</span>
+          <h2 class="section-title section-title_theme_article-grid">Suzanne Saroff’s meticulously arranged photographs
+            alter perceptions</h2>
+          <span class="author-name">By Reta Torphy</span>
+        </article>
+      </li>
+    </ul>
   </section>
 </body>
 
