--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="page">
   <header class="header">
     <div class="header__container">
-      <img class="header__logo" src="./images/logo.png" alt="page logo">
+      <img class="logo" src="./images/logo.png" alt="page logo">
       <nav>
         <ul class="header__menu-items">
           <li><a class="header__menu-item" href="#" target="_blank">Home</a></li>
@@ -79,7 +79,7 @@
       <li>
         <article class="article-grid__item">
           <img class="image image_theme_article-grid" src="./images/grid5.png" alt="">
-          <span class="image-caption">Interactive Design</span>
+          <span class="image-caption">Graphic Design</span>
           <h2 class="section-title section-title_theme_article-grid">Anonymous Israeli art collective Broken Fingaz
             direct music video for U2 and Beck</h2>
           <span class="author-name">By Simeon Brekke</span>
@@ -96,6 +96,180 @@
       </li>
     </ul>
   </section>
+
+  <section class="latest-posts-grid">
+    <div class="image-caption image-caption_theme_latest-posts">Latests posts</div>
+    <ul class="latest-posts-grid__items">
+      <li>
+        <article class="article-grid__item article-grid__item_theme_latest-posts-grid">
+          <image class="image image_theme_latest-posts-grid" src="./images/first_photo_japan.png">
+          <div class="image-caption">Illustration</div>
+          <h2 class="section-title section-title_theme_article-grid">Japan House opens in mountainside to foster peak creativity.</h2>
+          <span class="author-name">By Reta Torphy</span>
+        </article>
+      </li>
+      <li>
+        <article class="article-grid__item article-grid__item_theme_latest-posts-grid">
+          <image class="image image_theme_latest-posts-grid" src="./images/grid1.png">
+          <div class="image-caption">Photography</div>
+          <h2 class="section-title section-title_theme_article-grid">Helmut Lang celebrates taxi drivers worldwide in
+            latest campaign</h2>
+          <span class="author-name">By Alessandra Ortiz</span>
+        </article>
+      </li>
+      <li>
+        <article class="article-grid__item article-grid__item_theme_latest-posts-grid">
+          <image class="image image_theme_latest-posts-grid" src="./images/grid2.png">
+          <div class="image-caption">Photography</div>
+          <h2 class="section-title section-title_theme_article-grid">Bowlcut launch a new summer collection that pays
+            homage to “UK legends”</h2>
+          <span class="author-name">By Rosanna Ondricka</span>
+        </article>
+      </li>
+      <li>
+        <article class="article-grid__item article-grid__item_theme_latest-posts-grid">
+          <image class="image image_theme_latest-posts-grid" src="./images/grid3.png">
+          <div class="image-caption">Photography</div>
+          <h2 class="section-title section-title_theme_article-grid">Thousands of previously unseen photographs by Andy
+            Warhol will be made public this Autumn</h2>
+          <span class="author-name">By Annie Lueilwitz</span>
+        </article>
+      </li>
+      <li>
+        <article class="article-grid__item article-grid__item_theme_latest-posts-grid">
+          <image class="image image_theme_latest-posts-grid" src="./images/grid4.png">
+          <div class="image-caption">Interactive Design</div>
+          <h2 class="section-title section-title_theme_article-grid">London-based Yinka Ilori’s storytelling furniture</h2>
+          <span class="author-name">By Annie Lueilwitz</span>
+        </article>
+      </li>
+      <li>
+        <article class="article-grid__item article-grid__item_theme_latest-posts-grid">
+          <image class="image image_theme_latest-posts-grid" src="./images/grid5.png">
+          <div class="image-caption">Graphic Design</div>
+          <h2 class="section-title section-title_theme_article-grid">Anonymous Israeli art collective Broken Fingaz
+            direct music video for U2 and Beck</h2>
+          <span class="author-name">By Simeon Brekke</span>
+        </article>
+      </li>
+      <li>
+        <article class="article-grid__item article-grid__item_theme_latest-posts-grid">
+          <image class="image image_theme_latest-posts-grid" src="./images/grid6.png">
+          <div class="image-caption">Architecture</div>
+          <h2 class="section-title section-title_theme_article-grid">Suzanne Saroff’s meticulously arranged photographs
+            alter perceptions</h2>
+          <span class="author-name">By Reta Torphy</span>
+        </article>
+      </li>
+      <li>
+        <article class="article-grid__item article-grid__item_theme_latest-posts-grid">
+          <image class="image image_theme_latest-posts-grid" src="./images/grid7.png">
+          <div class="image-caption">Graphic Design</div>
+          <h2 class="section-title section-title_theme_article-grid">Anu Ambasna’s playful illustrations celebrate club culture, brown bodies and perfect paunches</h2>
+          <span class="author-name">By Leo Bartell</span>
+        </article>
+      </li>
+    </ul>
+    <button class="latest-posts-grid__button">View All Latest Posts</button>
+  </section>
+
+  <section class="featured-posts">
+    <div class="image-caption image-caption_theme_latest-posts">Featured posts</div>
+    <ul class="featured-posts__items">
+      <li>
+        <article class="article-grid__item">
+          <image class="image image_theme_latest-posts-grid" src="./images/featured1.png">
+          <div class="image-caption">Graphic design</div>
+          <h2 class="section-title section-title_theme_article-grid">A Brief History of the FIFA World Cup Logo</h2>
+          <span class="author-name">By Clem Onojeghuo</span>
+        </article>
+      </li>
+      <li>
+        <article class="article-grid__item">
+          <image class="image image_theme_latest-posts-grid" src="./images/featured2.png">
+          <div class="image-caption">Graphic design</div>
+          <h2 class="section-title section-title_theme_article-grid">Need a guide to LA’s graphic design scene? Shoplifters’ new issue has got your back</h2>
+          <span class="author-name">By Alessandra Ortiz</span>
+        </article>
+      </li>
+      <li>
+        <article class="article-grid__item">
+          <image class="image image_theme_latest-posts-grid" src="./images/featured3.png">
+          <div class="image-caption">Photography</div>
+          <h2 class="section-title section-title_theme_article-grid">Fred Rowson directs film for Years and Years</h2>
+          <span class="author-name">By Coby Gottlieb</span>
+        </article>
+      </li>
+      <li>
+        <article class="article-grid__item">
+          <image class="image image_theme_latest-posts-grid" src="./images/featured4.png">
+          <div class="image-caption">Illustration</div>
+          <h2 class="section-title section-title_theme_article-grid">M&C Saatchi and Fontsmith collaborate on font collection for House of St Barnabas</h2>
+          <span class="author-name">By Annie Lueilwitz</span>
+        </article>
+      </li>
+      </ul>
+  </section>
+
+  <footer class="footer">
+    <div class="footer__content">
+      <div class="copyright-container">
+        <img src="./images/logo-footer.png" alt="" class="logo">
+        <div class="copyright-container__heading">© 2018 Noiceland™, all rights reserved</div>
+      </div>
+      <nav class="nav">
+        <div class="footer__links">
+          <div class="footer__heading">Categories</div>
+          <div class="footer__category-items-container">
+            <ul class="footer__category-items">
+              <li><a href="#" class="footer__category-item">Animation</a></li>
+              <li><a href="#" class="footer__category-item">Interactive Design</a></li>
+              <li><a href="#" class="footer__category-item">Architecture</a></li>
+              <li><a href="#" class="footer__category-item">Miscellaneous</a></li>
+              <li><a href="#" class="footer__category-item">Graphic Design</a></li>
+              <li><a href="#" class="footer__category-item">Photography</a></li>
+              <li><a href="#" class="footer__category-item">Illustration</a></li>
+              <li><a href="#" class="footer__category-item">Product Design</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer__forms">
+          <div class="footer__heading">Subscribe to newsletter</div>
+          <form class="email__form" action="" method="get">
+            <label for="email"></label>
+            <input class="email__input" type="email" name="email" id="email" placeholder="email address">
+            <button class="email__button" type="submit">Send</button>
+          </form>
+        </div>
+      </nav>
+      <nav class="nav nav_external_info">
+        <div class="footer__links">
+          <div class="footer__heading">Information</div>
+          <ul class="footer__category-items_external_info">
+            <li><a href="#" class="footer__category-item">about</a></li>
+            <li><a href="#" class="footer__category-item">contact</a></li>
+            <li><a href="#" class="footer__category-item">terms</a></li>
+          </ul>
+        </div>
+        <div class="footer__links">
+          <div class="footer__heading">Follow us</div>
+          <ul class="footer__category-items_external_info">
+            <li><a href="#" class="footer__category-item">Instagram</a></li>
+            <li><a href="#" class="footer__category-item">facebook</a></li>
+            <li><a href="#" class="footer__category-item">twitter</a></li>
+          </ul>
+        </div>
+        <div class="footer__links">
+          <div class="footer__heading">Template</div>
+          <ul class="footer__category-items_external_info">
+            <li><a href="#" class="footer__category-item">Image License Info</a></li>
+            <li><a href="#" class="footer__category-item">Powered by Webflow</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+
+  </footer>
 </body>
 
 </html>
