first edition adaptive

--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
       </nav>
     </div>
   </header>
-
+<main>
   <section class="intro">
     <article class="intro__article">
-      <img src="./images/first_photo_japan.png" alt="Japan mountains" class="intro__image">
+      <a class="photo-link" href="#" target="_blank"><img src="./images/first_photo_japan.png" alt="Japan mountains" class="intro__image"></a>
       <div class="intro__content">
-        <span class="image-caption">Illustration</span>
-        <h1 class="section-title">Japan House opens in mountainside to foster peak creativity.</h1>
+        <div class="image-caption">Illustration</div>
+        <a class="title-link" href="#" target="_blank"><p class="section-title">Japan House opens in mountainside to foster peak creativity.</p></a>
         <p class="section-subtitle">Enim omittam qui id, ex quo atqui dictas complectitur. Nec ad timeam
           accusata, hinc justo falli id eum, ferri novum molestie eos cu.</p>
-        <span class="author-name">By Reta Torphy</span>
+        <div class="author-name">By Reta Torphy</div>
       </div>
     </article>
   </section>
-
+<!--
   <section class="article-grid">
     <ul class="article-grid__items">
       <li>
@@ -103,70 +103,75 @@
       <li>
         <article class="article-grid__item article-grid__item_theme_latest-posts-grid">
           <image class="image image_theme_latest-posts-grid" src="./images/first_photo_japan.png">
-          <div class="image-caption">Illustration</div>
-          <h2 class="section-title section-title_theme_article-grid">Japan House opens in mountainside to foster peak creativity.</h2>
-          <span class="author-name">By Reta Torphy</span>
+            <div class="image-caption">Illustration</div>
+            <h2 class="section-title section-title_theme_article-grid">Japan House opens in mountainside to foster peak
+              creativity.</h2>
+            <span class="author-name">By Reta Torphy</span>
         </article>
       </li>
       <li>
         <article class="article-grid__item article-grid__item_theme_latest-posts-grid">
           <image class="image image_theme_latest-posts-grid" src="./images/grid1.png">
-          <div class="image-caption">Photography</div>
-          <h2 class="section-title section-title_theme_article-grid">Helmut Lang celebrates taxi drivers worldwide in
-            latest campaign</h2>
-          <span class="author-name">By Alessandra Ortiz</span>
+            <div class="image-caption">Photography</div>
+            <h2 class="section-title section-title_theme_article-grid">Helmut Lang celebrates taxi drivers worldwide in
+              latest campaign</h2>
+            <span class="author-name">By Alessandra Ortiz</span>
         </article>
       </li>
       <li>
         <article class="article-grid__item article-grid__item_theme_latest-posts-grid">
           <image class="image image_theme_latest-posts-grid" src="./images/grid2.png">
-          <div class="image-caption">Photography</div>
-          <h2 class="section-title section-title_theme_article-grid">Bowlcut launch a new summer collection that pays
-            homage to “UK legends”</h2>
-          <span class="author-name">By Rosanna Ondricka</span>
+            <div class="image-caption">Photography</div>
+            <h2 class="section-title section-title_theme_article-grid">Bowlcut launch a new summer collection that pays
+              homage to “UK legends”</h2>
+            <span class="author-name">By Rosanna Ondricka</span>
         </article>
       </li>
       <li>
         <article class="article-grid__item article-grid__item_theme_latest-posts-grid">
           <image class="image image_theme_latest-posts-grid" src="./images/grid3.png">
-          <div class="image-caption">Photography</div>
-          <h2 class="section-title section-title_theme_article-grid">Thousands of previously unseen photographs by Andy
-            Warhol will be made public this Autumn</h2>
-          <span class="author-name">By Annie Lueilwitz</span>
+            <div class="image-caption">Photography</div>
+            <h2 class="section-title section-title_theme_article-grid">Thousands of previously unseen photographs by
+              Andy
+              Warhol will be made public this Autumn</h2>
+            <span class="author-name">By Annie Lueilwitz</span>
         </article>
       </li>
       <li>
         <article class="article-grid__item article-grid__item_theme_latest-posts-grid">
           <image class="image image_theme_latest-posts-grid" src="./images/grid4.png">
-          <div class="image-caption">Interactive Design</div>
-          <h2 class="section-title section-title_theme_article-grid">London-based Yinka Ilori’s storytelling furniture</h2>
-          <span class="author-name">By Annie Lueilwitz</span>
+            <div class="image-caption">Interactive Design</div>
+            <h2 class="section-title section-title_theme_article-grid">London-based Yinka Ilori’s storytelling furniture
+            </h2>
+            <span class="author-name">By Annie Lueilwitz</span>
         </article>
       </li>
       <li>
         <article class="article-grid__item article-grid__item_theme_latest-posts-grid">
           <image class="image image_theme_latest-posts-grid" src="./images/grid5.png">
-          <div class="image-caption">Graphic Design</div>
-          <h2 class="section-title section-title_theme_article-grid">Anonymous Israeli art collective Broken Fingaz
-            direct music video for U2 and Beck</h2>
-          <span class="author-name">By Simeon Brekke</span>
+            <div class="image-caption">Graphic Design</div>
+            <h2 class="section-title section-title_theme_article-grid">Anonymous Israeli art collective Broken Fingaz
+              direct music video for U2 and Beck</h2>
+            <span class="author-name">By Simeon Brekke</span>
         </article>
       </li>
       <li>
         <article class="article-grid__item article-grid__item_theme_latest-posts-grid">
           <image class="image image_theme_latest-posts-grid" src="./images/grid6.png">
-          <div class="image-caption">Architecture</div>
-          <h2 class="section-title section-title_theme_article-grid">Suzanne Saroff’s meticulously arranged photographs
-            alter perceptions</h2>
-          <span class="author-name">By Reta Torphy</span>
+            <div class="image-caption">Architecture</div>
+            <h2 class="section-title section-title_theme_article-grid">Suzanne Saroff’s meticulously arranged
+              photographs
+              alter perceptions</h2>
+            <span class="author-name">By Reta Torphy</span>
         </article>
       </li>
       <li>
         <article class="article-grid__item article-grid__item_theme_latest-posts-grid">
           <image class="image image_theme_latest-posts-grid" src="./images/grid7.png">
-          <div class="image-caption">Graphic Design</div>
-          <h2 class="section-title section-title_theme_article-grid">Anu Ambasna’s playful illustrations celebrate club culture, brown bodies and perfect paunches</h2>
-          <span class="author-name">By Leo Bartell</span>
+            <div class="image-caption">Graphic Design</div>
+            <h2 class="section-title section-title_theme_article-grid">Anu Ambasna’s playful illustrations celebrate
+              club culture, brown bodies and perfect paunches</h2>
+            <span class="author-name">By Leo Bartell</span>
         </article>
       </li>
     </ul>
@@ -179,38 +184,40 @@
       <li>
         <article class="article-grid__item">
           <image class="image image_theme_latest-posts-grid" src="./images/featured1.png">
-          <div class="image-caption">Graphic design</div>
-          <h2 class="section-title section-title_theme_article-grid">A Brief History of the FIFA World Cup Logo</h2>
-          <span class="author-name">By Clem Onojeghuo</span>
+            <div class="image-caption">Graphic design</div>
+            <h2 class="section-title section-title_theme_article-grid">A Brief History of the FIFA World Cup Logo</h2>
+            <span class="author-name">By Clem Onojeghuo</span>
         </article>
       </li>
       <li>
         <article class="article-grid__item">
           <image class="image image_theme_latest-posts-grid" src="./images/featured2.png">
-          <div class="image-caption">Graphic design</div>
-          <h2 class="section-title section-title_theme_article-grid">Need a guide to LA’s graphic design scene? Shoplifters’ new issue has got your back</h2>
-          <span class="author-name">By Alessandra Ortiz</span>
+            <div class="image-caption">Graphic design</div>
+            <h2 class="section-title section-title_theme_article-grid">Need a guide to LA’s graphic design scene?
+              Shoplifters’ new issue has got your back</h2>
+            <span class="author-name">By Alessandra Ortiz</span>
         </article>
       </li>
       <li>
         <article class="article-grid__item">
           <image class="image image_theme_latest-posts-grid" src="./images/featured3.png">
-          <div class="image-caption">Photography</div>
-          <h2 class="section-title section-title_theme_article-grid">Fred Rowson directs film for Years and Years</h2>
-          <span class="author-name">By Coby Gottlieb</span>
+            <div class="image-caption">Photography</div>
+            <h2 class="section-title section-title_theme_article-grid">Fred Rowson directs film for Years and Years</h2>
+            <span class="author-name">By Coby Gottlieb</span>
         </article>
       </li>
       <li>
         <article class="article-grid__item">
           <image class="image image_theme_latest-posts-grid" src="./images/featured4.png">
-          <div class="image-caption">Illustration</div>
-          <h2 class="section-title section-title_theme_article-grid">M&C Saatchi and Fontsmith collaborate on font collection for House of St Barnabas</h2>
-          <span class="author-name">By Annie Lueilwitz</span>
+            <div class="image-caption">Illustration</div>
+            <h2 class="section-title section-title_theme_article-grid">M&C Saatchi and Fontsmith collaborate on font
+              collection for House of St Barnabas</h2>
+            <span class="author-name">By Annie Lueilwitz</span>
         </article>
       </li>
-      </ul>
+    </ul>
   </section>
-
+</main>
   <footer class="footer">
     <div class="footer__content">
       <div class="copyright-container">
@@ -270,6 +277,7 @@
     </div>
 
   </footer>
+  -->
 </body>
 
 </html>
