2nd section edited for mobiles etc

--- a/index.html
+++ b/index.html
@@ -27,76 +27,76 @@
 <main>
   <section class="intro">
     <article class="intro__article">
-      <a class="photo-link" href="#" target="_blank"><img src="./images/first_photo_japan.png" alt="Japan mountains" class="intro__image"></a>
+      <a class="photo-link" href="#" target="_blank"><img src="./images/first_photo_japan.png" alt="Japan mountains" class="image"></a>
       <div class="intro__content">
         <div class="image-caption">Illustration</div>
-        <a class="title-link" href="#" target="_blank"><p class="section-title">Japan House opens in mountainside to foster peak creativity.</p></a>
+        <a class="title-link" href="#" target="_blank"><h2 class="section-title">Japan House opens in mountainside to foster peak creativity.</h2></a>
         <p class="section-subtitle">Enim omittam qui id, ex quo atqui dictas complectitur. Nec ad timeam
           accusata, hinc justo falli id eum, ferri novum molestie eos cu.</p>
         <div class="author-name">By Reta Torphy</div>
       </div>
     </article>
   </section>
-<!--
+
   <section class="article-grid">
     <ul class="article-grid__items">
       <li>
         <article class="article-grid__item">
-          <img class="image image_theme_article-grid" src="./images/grid1.png" alt="">
-          <span class="image-caption">Photography</span>
-          <h2 class="section-title section-title_theme_article-grid">Helmut Lang celebrates taxi drivers worldwide in
-            latest campaign</h2>
-          <span class="author-name">By Alessandra Ortiz</span>
+          <a class="photo-link" href="#" target="_blank"><img class="image image_theme_article-grid" src="./images/grid1.png" alt="New York picture"></a>
+          <div class="image-caption">Photography</div>
+          <a class="title-link" href="#" target="_blank"><h2 class="section-title section-title_theme_article-grid">Helmut Lang celebrates taxi drivers worldwide in
+            latest campaign</h2></a>
+          <div class="author-name">By Alessandra Ortiz</div>
         </article>
       </li>
       <li>
         <article class="article-grid__item">
-          <img class="image image_theme_article-grid" src="./images/grid2.png" alt="">
-          <span class="image-caption">Photography</span>
-          <h2 class="section-title section-title_theme_article-grid">Bowlcut launch a new summer collection that pays
-            homage to “UK legends”</h2>
-          <span class="author-name">By Rosanna Ondricka</span>
+          <a class="photo-link" href="#" target="_blank"><img class="image image_theme_article-grid" src="./images/grid2.png" alt="Food image"></a>
+          <div class="image-caption">Photography</div>
+          <a class="title-link" href="#" target="_blank"><h2 class="section-title section-title_theme_article-grid">Bowlcut launch a new summer collection that pays
+            homage to “UK legends”</h2></a>
+          <div class="author-name">By Rosanna Ondricka</div>
         </article>
       </li>
       <li>
         <article class="article-grid__item">
-          <img class="image image_theme_article-grid" src="./images/grid3.png" alt="">
-          <span class="image-caption">Photography</span>
-          <h2 class="section-title section-title_theme_article-grid">Thousands of previously unseen photographs by Andy
-            Warhol will be made public this Autumn</h2>
-          <span class="author-name">By Annie Lueilwitz</span>
+          <a class="photo-link" href="#" target="_blank"><img class="image image_theme_article-grid" src="./images/grid3.png" alt="Man on the rock"></a>
+          <div class="image-caption">Photography</div>
+          <a class="title-link" href="#" target="_blank"><h2 class="section-title section-title_theme_article-grid">Thousands of previously unseen photographs by Andy
+            Warhol will be made public this Autumn</h2></a>
+          <div class="author-name">By Annie Lueilwitz</div>
         </article>
       </li>
       <li>
         <article class="article-grid__item">
-          <img class="image image_theme_article-grid" src="./images/grid4.png" alt="">
-          <span class="image-caption">Interactive Design</span>
-          <h2 class="section-title section-title_theme_article-grid">London-based Yinka Ilori’s storytelling furniture
-          </h2>
-          <span class="author-name">By Annie Lueilwitz</span>
+          <a class="photo-link" href="#" target="_blank"><img class="image image_theme_article-grid" src="./images/grid4.png" alt="Beach foto"></a>
+          <div class="image-caption">Interactive Design</div>
+          <a class="title-link" href="#" target="_blank"><h2 class="section-title section-title_theme_article-grid">London-based Yinka Ilori’s storytelling furniture
+          </h2></a>
+          <div class="author-name">By Annie Lueilwitz</div>
         </article>
       </li>
       <li>
         <article class="article-grid__item">
-          <img class="image image_theme_article-grid" src="./images/grid5.png" alt="">
-          <span class="image-caption">Graphic Design</span>
-          <h2 class="section-title section-title_theme_article-grid">Anonymous Israeli art collective Broken Fingaz
-            direct music video for U2 and Beck</h2>
-          <span class="author-name">By Simeon Brekke</span>
+          <a class="photo-link" href="#" target="_blank"><img class="image image_theme_article-grid" src="./images/grid5.png" alt="Man in the room"></a>
+          <div class="image-caption">Graphic Design</div>
+          <a class="title-link" href="#" target="_blank"><h2 class="section-title section-title_theme_article-grid">Anonymous Israeli art collective Broken Fingaz
+            direct music video for U2 and Beck</h2></a>
+          <div class="author-name">By Simeon Brekke</div>
         </article>
       </li>
       <li>
         <article class="article-grid__item">
-          <img class="image image_theme_article-grid" src="./images/grid6.png" alt="">
-          <span class="image-caption">Architecture</span>
-          <h2 class="section-title section-title_theme_article-grid">Suzanne Saroff’s meticulously arranged photographs
-            alter perceptions</h2>
-          <span class="author-name">By Reta Torphy</span>
+          <a class="photo-link" href="#" target="_blank"><img class="image image_theme_article-grid" src="./images/grid6.png" alt="Tunnel"></a>
+          <div class="image-caption">Architecture</div>
+          <a class="title-link" href="#" target="_blank"><h2 class="section-title section-title_theme_article-grid">Suzanne Saroff’s meticulously arranged photographs
+            alter perceptions</h2></a>
+          <div class="author-name">By Reta Torphy</div>
         </article>
       </li>
     </ul>
   </section>
-
+<!--
   <section class="latest-posts-grid">
     <div class="image-caption image-caption_theme_latest-posts">Latests posts</div>
     <ul class="latest-posts-grid__items">
